--- a/app/views/histories/index.html.erb
+++ b/app/views/histories/index.html.erb
@@ -36,25 +36,26 @@
 
 <% if user_signed_in? %>
 <h1>My Histories</h1>
-<div class="row">
-  <% @my_histories.each do |history| %>
-    <div class="col-sm-6 col-md-4">
-      <div class="thumbnail">
-        <%= link_to(image_tag(history.picture.thumb), history) if history.picture? %>
-        <div class="caption">
-          <h3><%= history.title %></h3>
-          <small><%= time_ago_in_words(history.created_at) %> ago</small>
-          <p><%= history.content.truncate(150)  %></p>
-          <p>Creador <%= history.user.email  %></p>
-          <p><%= link_to 'Show', history, class: "btn btn-primary" %>
-             <%= link_to 'Edit', edit_history_path(history), class: "btn btn-warning" %>
-             <%= link_to 'Destroy', history, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></p>
-             <% end %>
+  <div class="row">
+    <% @my_histories.reverse.each do |history| %>
+      <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+          <%= link_to(image_tag(history.picture.thumb), history) if history.picture? %>
+          <div class="caption">
+            <h3><%= history.title %></h3>
+            <small><%= time_ago_in_words(history.created_at) %> ago</small>
+            <p><%= history.content.truncate(150)  %></p>
+            <p>Creador <%= history.user.email  %></p>
+            <p><%= link_to 'Show', history, class: "btn btn-primary" %>
+              <% if user_signed_in? %>
+               <%= link_to 'Edit', edit_history_path(history), class: "btn btn-warning" %>
+               <%= link_to 'Destroy', history, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></p>
+               <% end %>
+          </div>
         </div>
       </div>
-    </div>
-  <% end %>
-</div>
-
+    <% end %>
+  </div>
+<% end  %>
 
 <br>
